--- a/index.html
+++ b/index.html
@@ -6,6 +6,6 @@
   <title>Earthquake Resources Map </title>
 </head>
 <body>
-
+  <script src=script.js"></script>                         
 </body>
 </html>
