--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0>
   <title>Earthquake Resources Map </title>
+  <script async defer data-website-id="56ce56cd-9bac-47e0-8e5f-3bfc7d2baba7" src="https://analytics.senih.dev/umami.js"></script>
 </head>
 <body>
   <script src=script.js"></script>                         
