--- a/index.html
+++ b/index.html
@@ -7,6 +7,9 @@
   <script async defer data-website-id="56ce56cd-9bac-47e0-8e5f-3bfc7d2baba7" src="https://analytics.senih.dev/umami.js"></script>
 </head>
 <body>
+                                                                                                                       
+  <h1>Earthquake Resources Map</h1>
+  <div id="map"></div>
   <script src=script.js"></script>   
   <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAsj8Y8dUwMaSuZXSzcZg_SATEpHk2Jnm8&map_ids=54ec69962ab64cbf" defer></script>
 
