--- a/index.html
+++ b/index.html
@@ -5,13 +5,30 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0>
   <title>Earthquake Resources Map </title>
   <script async defer data-website-id="56ce56cd-9bac-47e0-8e5f-3bfc7d2baba7" src="https://analytics.senih.dev/umami.js"></script>
+  <script src="https://polyfill.io/v3/polyfill.min.js?features=default"></script>
+  <link rel="stylesheet" type="text/css" href="./style.css" />
+  <script type="module" src="./script.js"></script>
 </head>
 <body>
                                                                                                                        
   <h1>Earthquake Resources Map</h1>
-  <div id="map"></div>
-  <script src=script.js"></script>   
-  <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAsj8Y8dUwMaSuZXSzcZg_SATEpHk2Jnm8&map_ids=54ec69962ab64cbf" defer></script>
 
+  <body>
+    <h3> Demo</h3>
+    <!--The div element for the map -->
+    <div id="map"></div>
+
+    <!-- 
+      The `defer` attribute causes the callback to execute after the full HTML
+      document has been parsed. For non-blocking uses, avoiding race conditions,
+      and consistent behavior across browsers, consider loading using Promises
+      with https://www.npmjs.com/package/@googlemaps/js-api-loader.
+      -->
+    <script
+      src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAsj8Y8dUwMaSuZXSzcZg_SATEpHk2Jnm8&callback=initMap&v=weekly"
+      defer
+    ></script>
+  </body>
+</html>
 </body>
 </html>
