--- a/data/public/index.html
+++ b/data/public/index.html
@@ -8,6 +8,7 @@
   <script src="https://polyfill.io/v3/polyfill.min.js?features=default"></script>
   <link rel="stylesheet" type="text/css" href="./style.css" />
   <script type="module" src="./script.js"></script>
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">                                       
 </head>
 <body>
                                                                                                                        
@@ -28,6 +29,8 @@
       src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAsj8Y8dUwMaSuZXSzcZg_SATEpHk2Jnm8&callback=initMap&v=weekly"
       defer
     ></script>
+                                                                                                                         
+    <a href="https://github.com/senihucar/earthquake-resources-map" class="fa fa-github"></a>                                                                                                                      
   </body>
 </html>
 </body>
