--- a/data/public/index.html
+++ b/data/public/index.html
@@ -26,7 +26,7 @@
       with https://www.npmjs.com/package/@googlemaps/js-api-loader.
       -->
     <script
-      src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAsj8Y8dUwMaSuZXSzcZg_SATEpHk2Jnm8&callback=initMap&v=weekly"
+      src="https://maps.googleapis.com/maps/api/js?key=[GOOGLE_MAPS_API_HERE]&callback=initMap&v=weekly"
       defer
     ></script>
                                                                                                                          
